objects/ssot__OutreachSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AverageGiftAmount__c</fullName>
        <label>Average Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageOnetimeGiftAmount__c</fullName>
        <label>Average Onetime Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageRecurringGiftAmount__c</fullName>
        <label>Average Recurring Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DonorCount__c</fullName>
        <label>Donor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCount__c</fullName>
        <label>Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Outreach Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnetimeDonorCount__c</fullName>
        <label>Onetime Donor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutreachSourceCodeId__c</fullName>
        <label>Outreach Source Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurringDonorCount__c</fullName>
        <label>Recurring Donor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseRate__c</fullName>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalGiftTransactionAmount__c</fullName>
        <label>Total Gift Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalOnetimeGiftAmount__c</fullName>
        <label>Total Onetime Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRecurringGiftAmount__c</fullName>
        <label>Total Recurring Gift Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761240641_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OutreachSummary_CampaignId_map_Campa_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>OutreachSummary_CampaignId_map_Campa_rel</relationshipLabel>
        <relationshipName>rel_1697761240641_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761240705_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OutreachSummary_OutreachSourceCodeId_rel</label>
        <referenceTo>ssot__OutreachSourceCode__dlm</referenceTo>
        <relationshipLabel>OutreachSummary_OutreachSourceCodeId_rel</relationshipLabel>
        <relationshipName>rel_1697761240705_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>